# helios_backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
deploy/caddy/: Caddyfile
helios_backend/: __init__.py  __main__.py  gunicorn_runner.py  log.py  settings.py  tkq.py
helios_backend/bot/: __init__.py  __main__.py  app.py  callbacks.py  keyboards.py  router.py  services.py  states.py
helios_backend/bot/common/: __init__.py  buy.py  connect.py  messaging.py  text.py  users.py
helios_backend/bot/routes/: __init__.py  account.py  buy.py  connect.py  general.py  legal.py  support.py
helios_backend/db/: config.py
helios_backend/db/dao/vpn/: __init__.py  balance_dao.py  base_plan_grant_dao.py  code_dao.py  payment_dao.py  plan_dao.py  runtime_setting_dao.py  user_dao.py
helios_backend/db/migrations/models/: 0_20260411150937_init.py  1_20260405090000_code_constraints.sql
helios_backend/db/models/: __init__.py
helios_backend/db/models/vpn/: __init__.py  admin_account.py  balance.py  base_plan_grant.py  code.py  code_usage.py  payment.py  runtime_setting.py  subscription_plan.py  user.py
helios_backend/services/: __init__.py
helios_backend/services/admin/: __init__.py  runtime_settings.py
helios_backend/services/auth/: jwt.py  passwords.py  telegram.py
helios_backend/services/balance/: __init__.py  service.py
helios_backend/services/codes/: __init__.py  service.py
helios_backend/services/marzban/: __init__.py  service.py
helios_backend/services/notifications/: __init__.py  bot_client.py  service.py
helios_backend/services/payments/: __init__.py  base.py  dummy_provider.py  service.py  yookassa_provider.py
helios_backend/services/plans/: __init__.py  service.py
helios_backend/services/redis/: dependency.py  lifespan.py
helios_backend/services/users/: service.py
helios_backend/static/: index.html
helios_backend/tasks/: notifications.py
helios_backend/web/: __init__.py  application.py  lifespan.py
helios_backend/web/admin/: __init__.py  panel.py
helios_backend/web/api/: __init__.py  router.py
helios_backend/web/api/auth/: __init__.py  schema.py  views.py
helios_backend/web/api/monitoring/: __init__.py
helios_backend/web/api/payments/: __init__.py  schema.py  views.py
helios_backend/web/api/plans/: __init__.py  schema.py  views.py
helios_backend/web/api/subscriptions/: __init__.py  schema.py  views.py
helios_backend/web/api/users/: __init__.py  schema.py  views.py
helios_backend/web/dependencies/: rate_limit.py  security.py  services.py
tests/: __init__.py  conftest.py  test_admin_passwords.py  test_bot_keyboards.py  test_helios_backend.py  test_marzban_service.py  test_notifications.py
